fix: tech chips appearance on small screens

--- a/src/scss/tech.section.scss
+++ b/src/scss/tech.section.scss
@@ -35,7 +35,7 @@ section:is(#tech-stack) {
         gap: 0.5rem;
 
         .chip {
-          border: none !important;
+          background: none;
           padding-inline: 0;
         }
       }
